--- a/app/src/main/res/layout/activity_info_receta.xml
+++ b/app/src/main/res/layout/activity_info_receta.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="Volver al menú"
+        android:text="@string/volverMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -37,7 +37,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
-        android:text="Pasos a seguir:"
+        android:text="@string/recetaPasos"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imagenReceta" />
 
@@ -64,7 +64,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="84dp"
-        android:text="Ver ingredientes "
+        android:text="@string/verIngredientes"
         app:layout_constraintBottom_toTopOf="@+id/pasosSeguir"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
