--- a/app/src/main/res/layout/activity_usuario_perfil.xml
+++ b/app/src/main/res/layout/activity_usuario_perfil.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginBottom="24dp"
-        android:text="Volver al menú"
+        android:text="@string/volverMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -27,7 +27,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="24dp"
-        android:text="Cerrar sesión"
+        android:text="@string/cerrarSesion"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:text="Mis recetas:"
+        android:text="@string/misRecetas"
         app:layout_constraintBottom_toTopOf="@+id/usuarioRecetas"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iconoUsuario"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="96dp"
-        android:text="Añadir receta"
+        android:text="@string/addReceta"
         app:layout_constraintBottom_toTopOf="@+id/usuarioRecetas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
