--- a/app/src/main/res/layout-land/activity_anadir_receta.xml
+++ b/app/src/main/res/layout-land/activity_anadir_receta.xml
@@ -28,25 +28,12 @@
         android:layout_height="69dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="80dp"
         android:hint="@string/nomReceta"
-        app:layout_constraintBottom_toTopOf="@+id/botonAddIngrediente"
-        app:layout_constraintEnd_toStartOf="@+id/pasosSeguir"
-        app:layout_constraintHorizontal_bias="0.615"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/buttonVolverAdd"
-        style="@style/Botones"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:text="@string/volver"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/botonAddIngrediente"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintEnd_toStartOf="@+id/pasosSeguir"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textPasos"
@@ -66,12 +53,26 @@
         style="@style/Botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
         android:text="@string/addReceta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pasosSeguir"
-        app:layout_constraintTop_toBottomOf="@+id/botonAddIngrediente" />
+        app:layout_constraintTop_toBottomOf="@+id/botonAddIngrediente"
+        app:layout_constraintVertical_bias="0.927" />
+
+    <Button
+        android:id="@+id/buttonVolverAdd"
+        style="@style/Botones"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:text="@string/volver"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botonAddIngrediente"
+        app:layout_constraintVertical_bias="0.941" />
 
     <ImageView
         android:id="@+id/imagenNuevaReceta"
@@ -79,10 +80,11 @@
         android:layout_height="140dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/nombreNuevaReceta"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.326"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/addfotoreceta" />
 
     <Button
@@ -90,10 +92,15 @@
         style="@style/Botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginTop="170dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="112dp"
         android:text="@string/addIngredientes"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/nombreNuevaReceta"
         app:layout_constraintEnd_toStartOf="@+id/pasosSeguir"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imagenNuevaReceta"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
