Estilo de dos diálogos hecho, y estilo general mejorado

--- a/app/src/main/res/layout-land/activity_anadir_receta.xml
+++ b/app/src/main/res/layout-land/activity_anadir_receta.xml
@@ -16,6 +16,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:theme="@style/EditTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textPasos"
@@ -30,6 +31,8 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="80dp"
         android:hint="@string/nomReceta"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pasosSeguir"
         app:layout_constraintHorizontal_bias="1.0"
