--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,7 +12,6 @@
         style="@style/BotonBuscar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:text="@string/buscarReceta"
         app:layout_constraintBottom_toTopOf="@+id/botonRegistrarPerfil"
         app:layout_constraintEnd_toEndOf="@+id/listaBuscador"
@@ -25,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="140dp"
         android:layout_marginLeft="140dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonIdioma"
         app:layout_constraintTop_toBottomOf="@+id/botonBuscarRecetas"
@@ -59,10 +58,12 @@
     <ListView
         android:id="@+id/listaBuscador"
         android:layout_width="330dp"
-        android:layout_height="69dp"
+        android:layout_height="75dp"
         android:layout_below="@+id/buscador"
         android:layout_marginStart="18dp"
         android:layout_marginLeft="18dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/botonBuscarRecetas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.636"
