--- a/app/src/main/res/layout-land/listview_item.xml
+++ b/app/src/main/res/layout-land/listview_item.xml
@@ -4,9 +4,10 @@
     android:padding="10dp">
 
    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+       android:id="@+id/name"
+       style="@style/Texto"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
         />
 
 </RelativeLayout>
