--- a/app/src/main/res/layout/activity_anadir_receta.xml
+++ b/app/src/main/res/layout/activity_anadir_receta.xml
@@ -15,6 +15,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:theme="@style/EditTextColor"
         app:layout_constraintBottom_toTopOf="@+id/botonAddReceta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
@@ -29,6 +30,8 @@
         android:layout_height="57dp"
         android:layout_marginTop="32dp"
         android:hint="@string/nomReceta"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.604"
         app:layout_constraintStart_toEndOf="@+id/imagenNuevaReceta"
