--- a/app/src/main/res/layout-land/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout-land/activity_iniciar_sesion.xml
@@ -15,6 +15,8 @@
         android:layout_marginTop="32dp"
         android:hint="@string/nomUsuario"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toEndOf="@+id/imagenInicioSesion"
@@ -56,6 +58,8 @@
         android:hint="@string/contrasena"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imagenInicioSesion"
         app:layout_constraintTop_toBottomOf="@+id/nombreUsuario" />
