--- a/app/src/main/res/layout-land/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout-land/activity_registrar_usuario.xml
@@ -16,6 +16,8 @@
         android:layout_marginTop="32dp"
         android:hint="@string/nomUsuario"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imagenRegistro"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +30,8 @@
         android:hint="@string/confirmarContrasena"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imagenRegistro"
         app:layout_constraintTop_toBottomOf="@+id/contrasenaRegistro" />
@@ -40,6 +44,8 @@
         android:hint="@string/contrasena"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imagenRegistro"
         app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioRegistro" />
