--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -9,6 +9,7 @@
 
     <EditText
         android:id="@+id/nombreUsuario"
+        style="@style/EditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -16,10 +17,11 @@
         android:layout_marginEnd="24dp"
         android:hint="@string/nomUsuario"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imagenInicioSesion"
-        style="@style/EditText"/>
+        app:layout_constraintTop_toBottomOf="@+id/imagenInicioSesion" />
 
     <TextView
         android:id="@+id/linkRegistro"
@@ -61,6 +63,8 @@
         android:hint="@string/contrasena"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nombreUsuario"
