--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -17,6 +17,8 @@
         android:layout_marginEnd="24dp"
         android:hint="@string/nomUsuario"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +35,8 @@
         android:hint="@string/contrasena"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioRegistro"
@@ -49,6 +53,8 @@
         android:hint="@string/confirmarContrasena"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:theme="@style/EditTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contrasenaRegistro" />
