--- a/app/src/main/res/layout/dialog_add_ingrediente.xml
+++ b/app/src/main/res/layout/dialog_add_ingrediente.xml
@@ -36,6 +36,8 @@
             android:layout_marginEnd="2dp"
             android:layout_marginRight="2dp"
             android:hint="@string/ingrediente"
+            android:singleLine="true"
+            android:theme="@style/EditTextColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textNuevoIngrediente" />
