--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -14,6 +14,11 @@
         <item name="android:fontFamily">casual</item>
         <item name="android:textColor">#000000</item>
     </style>
+    <style name="EditTextColor" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">#CE93D8</item>
+        <item name="colorControlActivated">#AB47BC</item>
+        <item name="android:textColorHighlight">#E1BEE7</item>
+    </style>
     <style name="ImageBorder">
         <item name="android:width">5dp</item>
         <item name="android:background">#000000</item>
