Solucionada duplicación en el añadido de ingredientes

--- a/app/src/main/res/layout/recycleview_item.xml
+++ b/app/src/main/res/layout/recycleview_item.xml
@@ -24,8 +24,7 @@
             style="@style/Texto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="18dp" />
+            android:gravity="center" />
 
     </LinearLayout>
 
