--- a/app/src/main/res/layout/activity_info_receta.xml
+++ b/app/src/main/res/layout/activity_info_receta.xml
@@ -73,8 +73,9 @@
     <TextView
         android:id="@+id/nombreReceta"
         style="@style/Texto"
-        android:layout_width="184dp"
-        android:layout_height="47dp"
+        android:layout_width="177dp"
+        android:layout_height="83dp"
+        android:gravity="center_vertical"
         app:layout_constraintBottom_toTopOf="@+id/botonVerIngredientes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.644"
