--- a/app/src/main/res/layout-land/activity_anadir_receta.xml
+++ b/app/src/main/res/layout-land/activity_anadir_receta.xml
@@ -9,9 +9,11 @@
 
     <EditText
         android:id="@+id/pasosSeguir"
-        style="@style/Texto"
+        style="@style/EditText"
         android:layout_width="370dp"
         android:layout_height="295dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
         android:gravity="start|top"
@@ -24,11 +26,11 @@
 
     <EditText
         android:id="@+id/nombreNuevaReceta"
-        style="@style/Texto"
-        android:layout_width="325dp"
-        android:layout_height="69dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
+        style="@style/EditText"
+        android:layout_width="380dp"
+        android:layout_height="73dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="80dp"
         android:hint="@string/nomReceta"
         android:singleLine="true"
@@ -43,8 +45,8 @@
         style="@style/Texto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
         android:text="@string/recetaPasos"
         app:layout_constraintBottom_toTopOf="@+id/botonAddReceta"
         app:layout_constraintStart_toEndOf="@+id/imagenNuevaReceta"
@@ -56,8 +58,8 @@
         style="@style/Botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginRight="54dp"
         android:text="@string/addReceta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pasosSeguir"
@@ -69,8 +71,8 @@
         style="@style/Botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
         android:text="@string/volver"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +81,7 @@
 
     <ImageView
         android:id="@+id/imagenNuevaReceta"
-        android:layout_width="140dp"
+        android:layout_width="120dp"
         android:layout_height="140dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
@@ -95,9 +97,9 @@
         style="@style/Botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="170dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="112dp"
         android:text="@string/addIngredientes"
         app:layout_constraintBottom_toTopOf="@+id/nombreNuevaReceta"
