--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,7 +12,8 @@
     </style>
     <style name="EditText">
         <item name="android:fontFamily">casual</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#717171</item>
+        <item name="android:textColorHint">#989898</item>
     </style>
     <style name="EditTextColor" parent="Theme.AppCompat.Light">
         <item name="colorControlNormal">#CE93D8</item>
@@ -20,12 +21,12 @@
         <item name="android:textColorHighlight">#E1BEE7</item>
     </style>
     <style name="Texto">
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#717171</item>
         <item name="android:textSize">18dp</item>
         <item name="android:fontFamily">casual</item>
     </style>
     <style name="Titulo">
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#717171</item>
         <item name="android:textSize">18dp</item>
         <item name="android:fontFamily">casual</item>
         <item name="android:textStyle">bold</item>
