--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Botones">
+        <item name="android:fontFamily">casual</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="BotonBuscar">
+        <item name="android:fontFamily">casual</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="EditText">
+        <item name="android:fontFamily">casual</item>
+        <item name="android:textColor">#717171</item>
+        <item name="android:textColorHint">#989898</item>
+    </style>
+    <style name="EditTextColor" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">#CE93D8</item>
+        <item name="colorControlActivated">#AB47BC</item>
+        <item name="android:textColorHighlight">#E1BEE7</item>
+    </style>
+    <style name="Texto">
+        <item name="android:textColor">#717171</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:fontFamily">casual</item>
+    </style>
+    <style name="Titulo">
+        <item name="android:textColor">#717171</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:fontFamily">casual</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
