--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -86,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="8dp"
         android:text="@string/volver"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/loginBoton"
