--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -94,6 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginLeft="48dp"
+        android:layout_marginTop="10dp"
         android:text="@string/volver"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/registroBoton"
