--- a/app/src/main/res/layout/dialogo_galeria_camara.xml
+++ b/app/src/main/res/layout/dialogo_galeria_camara.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="356dp"
-        android:layout_height="230dp"
+        android:layout_height="270dp"
         android:layout_weight="1"
         android:background="@drawable/dialog">
 
@@ -17,10 +17,11 @@
             style="@style/Titulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="140dp"
+            android:layout_marginBottom="164dp"
             android:text="@string/obtenerImagen"
             app:layout_constraintBottom_toTopOf="@+id/buttonVolver"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.511"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
@@ -40,7 +41,7 @@
             android:layout_height="108dp"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="70dp"
             android:background="@drawable/camara"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -52,7 +53,7 @@
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="80dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:background="@drawable/galeria"
