--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,13 +2,8 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/editar"
-        android:icon="@drawable/editar"
-        android:title="Editar"
-        app:showAsAction="ifRoom|withText" />
-    <item
         android:id="@+id/eliminar"
         android:icon="@drawable/eliminar"
-        android:title="Eliminar"
+        android:title="@string/eliminar"
         app:showAsAction="ifRoom|withText" />
 </menu>
