--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -22,13 +22,13 @@
         style="@style/Botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginLeft="140dp"
+        android:layout_marginStart="288dp"
+        android:layout_marginLeft="288dp"
         android:layout_marginBottom="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonIdioma"
+        app:layout_constraintStart_toEndOf="@+id/playPause"
         app:layout_constraintTop_toBottomOf="@+id/botonBuscarRecetas"
-        app:layout_constraintVertical_bias="0.6" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/botonRegistrarPerfil"
@@ -98,6 +98,31 @@
         android:text="@string/cambiarIdioma"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buscador"
+        app:layout_constraintStart_toEndOf="@+id/playPause"
+        app:layout_constraintTop_toBottomOf="@+id/recetasCarrousel" />
+
+    <TextView
+        android:id="@+id/textMusic"
+        style="@style/Texto"
+        android:layout_width="136dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginLeft="85dp"
+        app:layout_constraintBottom_toTopOf="@+id/playPause"
+        app:layout_constraintEnd_toStartOf="@+id/buttonIdioma"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recetasCarrousel" />
+
+    <ImageView
+        android:id="@+id/playPause"
+        android:layout_width="66dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/botonIniciarAdd"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/music" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
