--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/calendar"
+        android:icon="@drawable/calendar"
+        android:title="@string/calendario"
+        app:showAsAction="ifRoom|withText" />
+    <item
         android:id="@+id/eliminar"
         android:icon="@drawable/eliminar"
         android:title="@string/eliminar"
