--- a/app/src/main/res/layout/dialogo_descargas.xml
+++ b/app/src/main/res/layout/dialogo_descargas.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="140dp"
-            android:text="@string/idioma"
+            android:text="@string/guardarDescarga"
             app:layout_constraintBottom_toTopOf="@+id/buttonVolverDescargas"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
